# Raycaster

./: CMakeLists.txt  README.md  level_loader.c  main.c
libraries/: level_loader.c  level_loader.h
maps/: Test_map.txt  labirynth.txt  testLevel.txt  testLevel2
